Subida con pruebas