@@ -1,20 +1,15 @@
 package com.example.FinanzApp.Servicios;
 
 import com.example.FinanzApp.DTOS.ConsejosDTO;
-import com.example.FinanzApp.DTOS.DepositoDTO;
-import com.example.FinanzApp.DTOS.IngresoDTO;
+
 import com.example.FinanzApp.Entidades.Consejos;
-import com.example.FinanzApp.Entidades.Deposito;
-import com.example.FinanzApp.Entidades.Ingreso;
 import com.example.FinanzApp.Repositorios.RepositorioConsejos;
 import lombok.AllArgsConstructor;
 import lombok.Data;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
-import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Data
@@ -46,7 +41,7 @@ public class ServicioConsejos {
 
         return consejos.stream()
                 .map(consejo -> modelMapper.map(consejo, ConsejosDTO.class))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
 
